# tonictest

./: .gitignore  README.md  prompt.txt
.devcontainer/: devcontainer.json  docker-compose.yml
client/: Cargo.toml
client/src/: main.rs  mylib.rs  sayhello.rs
server/: Cargo.toml
server/src/: main.rs  mylib.rs
